--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,12 @@
       <version>RELEASE</version>
       <scope>compile</scope>
     </dependency>
-
+    <!-- https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2 -->
+    <dependency>
+      <groupId>com.alibaba.fastjson2</groupId>
+      <artifactId>fastjson2</artifactId>
+      <version>2.0.35</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>javaweb-supermarket-bill-management-system</finalName>
