--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,12 @@
       <artifactId>fastjson2</artifactId>
       <version>2.0.35</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-impl -->
     <dependency>
-      <groupId>org.glassfish.web</groupId>
-      <artifactId>jakarta.servlet.jsp.jstl</artifactId>
-      <version>2.0.0</version>
+      <groupId>org.apache.taglibs</groupId>
+      <artifactId>taglibs-standard-impl</artifactId>
+      <version>1.2.5</version>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
   <build>
